change project with vuejs

--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "pretpi23",
-  "private": true,
+  "name": "tets",
   "version": "0.0.0",
-  "type": "module",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
-  "devDependencies": {
-    "vite": "^4.1.0"
-  },
   "dependencies": {
     "moment": "^2.29.4",
-    "three": "^0.149.0"
+    "pinia": "^2.0.33",
+    "three": "^0.149.0",
+    "vue": "^3.2.47"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^4.0.0",
+    "vite": "^4.1.4"
   }
 }
