--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "moment": "^2.29.4",
     "pinia": "^2.0.33",
+    "tailwindcss": "^3.2.7",
     "three": "^0.149.0",
     "vue": "^3.2.47"
   },
