--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dayjs": "^1.11.7",
     "moment": "^2.29.4",
     "pinia": "^2.0.33",
     "tailwindcss": "^3.2.7",
